--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <div class="titel-region">
-        <img src="./logo.svg" alt="logo" class="logo" />
+        <img src="./Logo.svg" alt="logo" class="logo" />
         <h1>Katholisch-Öffentliche Bücherei Geldersheim</h1>
         <div class="wichtige-links">
           <a href="#" class="link">
