--- a/index.html
+++ b/index.html
@@ -13,105 +13,116 @@
     <title>Template</title>
   </head>
   <body>
-    <header class="header">
-      <div class="titel-region">
-        <img src="./Logo.svg" alt="logo" class="logo" />
-        <h1>Katholisch-Öffentliche Bücherei Geldersheim</h1>
-        <div class="wichtige-links">
-          <a href="#" class="link">
-            <i class="fas fa-book-reader"></i>
-            <span>Reservierungssystem</span>
-          </a>
-          <a href="#" class="link">
-            <i class="far fa-clock"></i>
-            <span>Öffnungszeiten</span>
-          </a>
-          <a href="#" class="link">
-            <i class="fas fa-search"></i>
-            <span>Mediensuche</span>
-          </a>
+    <div class="site">
+      <header class="header" id="wrapper-navbar">
+        <div class="titel-region">
+          <img src="./Logo.svg" alt="logo" class="logo" />
+          <h1>Katholisch-Öffentliche Bücherei Geldersheim</h1>
+          <div class="wichtige-links">
+            <a href="#" class="link">
+              <i class="fas fa-book-reader"></i>
+              <span>Reservierungssystem</span>
+            </a>
+            <a href="#" class="link">
+              <i class="far fa-clock"></i>
+              <span>Öffnungszeiten</span>
+            </a>
+            <a href="#" class="link">
+              <i class="fas fa-search"></i>
+              <span>Mediensuche</span>
+            </a>
+          </div>
+          <div class="menu-btn">
+            <p>MENU</p>
+            <div class="burger-container">
+              <div class="menu-btn-burger"></div>
+            </div>
+          </div>
         </div>
-        <div class="menu-btn">
-          <p>MENU</p>
-          <div class="burger-container">
-            <div class="menu-btn-burger"></div>
+        <nav>
+          <ul>
+            <li><a href="#">Neuigkeiten</a></li>
+            <li><a href="#">Buchvorstellungen</a></li>
+            <li><a href="#">Alle Medien</a></li>
+            <li><a href="#">Jahresbericht</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div class="spotlight">
+        <div class="background"></div>
+        <div class="information">
+          <div class="info-content">
+            <p>
+              Die Katholische – Öffentliche Pfarrbücherei Geldersheim ist im
+              ersten Gaden neben der Kirche untergebracht. Sie ist eine
+              öffentliche Bücherei. Jeder kann sich Bücher, CDs, Kassetten,
+              Zeitschriften und Spiele ausleihen. Die Bücherei wird komplett
+              ehrenamtlich geführt. Auf Ihren Besuch freut sich das
+              Bücherei-Team.
+            </p>
+            <h2>Unsere Öffnungszeiten:</h2>
+            <p>Montag, 15:30 bis 17:00 Uhr</p>
+            <p>Donnerstag, 18:00 bis 19:00 Uhr</p>
+            <h2>Ausleihzeiten / Gebühren</h2>
+            <p>Bücher: 4 Wochen / je Buch 10 Cent</p>
+            <p>Zeitschriften: 4 Wochen / je Zeitschrift 10 Cent</p>
+            <p>CDs/ Kassetten: 4 Wochen / je CD/ Kassette 20 Cent</p>
+            <p>Spiele: 4 Wochen / je Spiel 30 Cent</p>
           </div>
         </div>
       </div>
-      <nav>
-        <ul>
-          <li>Neuigkeiten</li>
-          <li>Buchvorstellungen</li>
-          <li>Alle Medien</li>
-          <li>Jahresbericht</li>
-          <li>Kontakt</li>
-        </ul>
-      </nav>
-    </header>
-    <div class="spotlight">
-      <div class="background"></div>
-      <div class="information">
-        <div class="info-content">
+      <div class="main-content">
+        <div class="articles">
+          <div class="article">
+            <h2>Titel</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae obcaecati ratione rerum id et voluptatem?
+            </p>
+            <span>Mehr lesen ...</span>
+          </div>
+          <div class="article">
+            <h2>Titel</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae obcaecati ratione rerum id et voluptatem?
+            </p>
+            <span>Mehr lesen ...</span>
+          </div>
+        </div>
+        <div class="sidebar">
+          <div class="newsletter">
+            <h3>Abonnieren Sie unseren Newsletter</h3>
+            <form>
+              <label for="email">Email:</label>
+              <input type="email" />
+              <input type="submit" value="Abschicken" />
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="footer-container">
+        <div class="row">
+          <a href="#wrapper-navbar" class="to-top">
+            <i class="fas fa-arrow-up"></i>
+            OBEN
+          </a>
+        </div>
+        <div class="footer">
           <p>
-            Die Katholische – Öffentliche Pfarrbücherei Geldersheim ist im
-            ersten Gaden neben der Kirche untergebracht. Sie ist eine
-            öffentliche Bücherei. Jeder kann sich Bücher, CDs, Kassetten,
-            Zeitschriften und Spiele ausleihen. Die Bücherei wird komplett
-            ehrenamtlich geführt. Auf Ihren Besuch freut sich das Bücherei-Team.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+            animi!
           </p>
-          <h2>Unsere Öffnungszeiten:</h2>
-          <p>Montag, 15:30 bis 17:00 Uhr</p>
-          <p>Donnerstag, 18:00 bis 19:00 Uhr</p>
-          <h2>Ausleihzeiten / Gebühren</h2>
-          <p>Bücher: 4 Wochen / je Buch 10 Cent</p>
-          <p>Zeitschriften: 4 Wochen / je Zeitschrift 10 Cent</p>
-          <p>CDs/ Kassetten: 4 Wochen / je CD/ Kassette 20 Cent</p>
-          <p>Spiele: 4 Wochen / je Spiel 30 Cent</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime vel
+            tempora impedit dolor fugit aliquid aspernatur, ea consequuntur
+            mollitia officia unde. Corrupti ex voluptatibus reprehenderit.
+            Dolorem illo laudantium esse pariatur.
+          </p>
         </div>
       </div>
     </div>
-    <div class="main-content">
-      <div class="articles">
-        <div class="article">
-          <h2>Titel</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-            obcaecati ratione rerum id et voluptatem?
-          </p>
-          <span>Mehr lesen ...</span>
-        </div>
-        <div class="article">
-          <h2>Titel</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-            obcaecati ratione rerum id et voluptatem?
-          </p>
-          <span>Mehr lesen ...</span>
-        </div>
-      </div>
-      <div class="sidebar">
-        <div class="newsletter">
-          <h3>Abonnieren Sie unseren Newsletter</h3>
-          <form>
-            <label for="email">Email:</label>
-            <input type="email" />
-            <input type="submit" value="Abschicken" />
-          </form>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
-        animi!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime vel
-        tempora impedit dolor fugit aliquid aspernatur, ea consequuntur mollitia
-        officia unde. Corrupti ex voluptatibus reprehenderit. Dolorem illo
-        laudantium esse pariatur.
-      </p>
-    </footer>
     <script src="app.js"></script>
   </body>
 </html>
