--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </div>
         </div>
-        <nav>
+        <nav class="navigation">
           <ul>
             <li><a href="#">Neuigkeiten</a></li>
             <li><a href="#">Buchvorstellungen</a></li>
