--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="site">
       <header class="header" id="wrapper-navbar">
         <div class="titel-region">
-          <img src="./Logo.svg" alt="logo" class="logo" />
+          <a href="#" class="logo-wrapper"
+            ><img src="./Logo.svg" alt="logo" class="logo"
+          /></a>
           <h1>Katholisch-Öffentliche Bücherei Geldersheim</h1>
           <div class="wichtige-links">
             <a href="#" class="link">
@@ -96,8 +98,8 @@
             <h3>Abonnieren Sie unseren Newsletter</h3>
             <form>
               <label for="email">Email:</label>
-              <input type="email" />
-              <input type="submit" value="Abschicken" />
+              <input type="email" id="email" />
+              <input type="submit" value="Abschicken" class="btn" />
             </form>
           </div>
         </div>
